Update h2o_scoring_outcluster.md